<resources>
    <string name="app_name">日记</string>
    <string name="save">保存</string>
    <string name="backup">备份</string>
    <string name="logger">日志</string>
    <string name="about">关于</string>
    <string name="user">用户</string>
    <string name="read">浏览</string>
    <string name="not_filled">未填写</string>
    <string name="edit">编辑</string>
    <string name="year">%d年</string>

    <string name="user_name">昵称</string>
    <string name="user_moments">签名</string>
    <string name="user_hint_moments_default">记录生活状态和转瞬即逝的灵感</string>
    <string name="user_edit_name">编辑昵称</string>
    <string name="user_edit_name_hint">请输入昵称</string>
    <string name="user_edit_moments">编辑签名</string>
    <string name="user_edit_moments_hint">请输入签名</string>

    <string name="backup_auto">保存日记后自动备份</string>
    <string name="backup_info">tip：备份日记不会随app卸载而删除，下次安装时可以重新恢复日记</string>
    <string name="backup_permission_file">备份日记需要读写文件系统的权限</string>
    <string name="backup_manager">管理备份</string>
    <string name="backup_manager_prefix">管理备份_</string>
    <string name="backup_manager_year">%d年</string>
    <string name="backup_manager_month">%d年%d月</string>

    <string name="backup_import">导入备份</string>
    <string name="backup_import_tip">将%s的备份信息导入日志中</string>
    <string name="backup_import_tip1">已完全导入</string>
    <string name="backup_import_tip2">%d条备份已导入</string>
    <string name="backup_count_not_import">%d条备份未导入</string>
    <string name="backup_detail_title">备份内容_%s</string>

    <string name="backup_verify">校验备份</string>
    <string name="backup_verify_menu">校验</string>
    <string name="backup_verify_name">%d年</string>
    <string name="backup_verify_verify_time">最后校验时间：%s</string>
    <string name="backup_verify_tip1">选择要校验的年份</string>
    <string name="backup_verify_tip2">tip：选择要校验的年份（可多选），如果有未备份的日记，会自动完成备份</string>
    <string name="backup_verify_success">已完全备份</string>
    <string name="backup_verify_append">已增加%d条备份</string>

    <string name="daily_title">日记_%s</string>
    <string name="daily_hint_content">输入日志内容</string>
    <string name="daily_tip_empty_text">日志内容不能为空</string>
    <string name="daily_tip_date">日期错误</string>

    <string name="read_title">日记_%d年</string>
    <string name="read_select_year">选择年份</string>

</resources>
